--- a/feature_dashboard.html
+++ b/feature_dashboard.html
@@ -120,7 +120,7 @@
               fetch: ['Name', 'Release', 'ObjectID', 'RevisionHistory'],
               filters: [
                 {
-                  property: 'Release',
+                  property: 'Release.Name',
                   value: null
                 },
                 {
@@ -178,18 +178,28 @@
               callback: function(records, operation) {
                 var t2 = new Date();
                 console.log('Unscheduled dates query took', (t2 - t1), 'ms, and retrieved', records ? records.length : 0, 'results.');
+                var relevant = false;
                 if (operation.wasSuccessful()) {
-                  records.filter(function(r) {
+                  var r_filt = records.filter(function(r) {
                     return r.get('Description').match(/RELEASE removed/);
-                  }).forEach(function(r) {
-                    release_lookups[unsched_features[0].get('Name')] = 
-                      r.get('Description').match(/RELEASE removed \[(.*?)\]/)[1];
-                    that.drops[unsched_features[0].get('ObjectID')] = 
-                      r.get('CreationDate').toDateString();
                   });
+                  
+                  if (r_filt.length > 0) {
+                    relevant = true;
+                    r_filt.forEach(function(r) {
+                      release_lookups[unsched_features[0].get('Name')] = 
+                        r.get('Description').match(/RELEASE removed \[(.*?)\]/)[1];
+                      that.drops[unsched_features[0].get('ObjectID')] = 
+                        r.get('CreationDate').toDateString();
+                    });
+                  }
                 }
 
-                features.push(unsched_features.shift());
+                if (relevant) {
+                  features.push(unsched_features.shift());
+                } else {
+                  unsched_features.shift();
+                }
                 if (unsched_features.length > 0) {
                   this.fetch_unschedule_dates(features, release_lookups, unsched_features);
                 } else {
